# django-revolution

./: .gitignore  CONTRIBUTING.md  LICENSE  package.json  troubleshooting.md
django_sample/: .gitignore  package.json  pyproject.toml  settings.py  test_schema.yaml  urls.py
django_sample/apps/private_api/: views.py
django_sample/openapi/archive/files/20250801_181912/: accounts_metadata.json  private_metadata.json  public_metadata.json
django_sample/openapi/archive/files/20250803_035535/: accounts_metadata.json  private_metadata.json  public_metadata.json
django_sample/openapi/archive/files/20250828_063246/: accounts_metadata.json  private_metadata.json  public_metadata.json
django_sample/openapi/archive/files/20250921_052543/: accounts_metadata.json  private_metadata.json  public_metadata.json
django_sample/openapi/archive/files/20250921_053129/: private_metadata.json
django_sample/openapi/clients/python/accounts/models/: PaginatedUserProfileList.py  (+5 more)
django_sample/openapi/clients/python/private/: __init__.py  api_config.py  openapi_config.yaml  pyproject.toml
django_sample/openapi/clients/python/public/: test_direct.py
django_sample/openapi/clients/typescript/: index.ts
django_sample/openapi/clients/typescript/accounts/: index.ts  package.json
django_sample/openapi/clients/typescript/private/: package.json  sdk.gen.ts
django_sample/openapi/clients/typescript/public/: package.json  sdk.gen.ts
django_sample/openapi/schemas/: accounts.yaml  private.yaml  public.yaml
django_sample/temp/python_templates_no_auth/: async_service.py.j2  service.py.j2
(+153 files in other folders)
